--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/Excel.jpeg" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>Excel Projects</h2>
@@ -95,7 +95,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/Sql_data_base_with_logo.png" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>SQL Projects</h2>
@@ -110,7 +110,7 @@
 
 								<!-- Box -->
 									<section class="box feature">
-										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image featured"><img src="images/R_logo.svg.png" alt="" /></a>
 										<div class="inner">
 											<header>
 												<h2>R Projects</h2>
@@ -225,11 +225,11 @@
 											<li><a href="https://github.com/datarhythms" class="icon brands fa-github"><span class="label">Github</span></a></li>
 											<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 											<li><a href="https://www.linkedin.com/in/asirifi-ohene-013aa433/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-											<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+											
 										</ul>
 										<p>1234 Fictional Road<br />
 										Nashville, TN 00000<br />
-										(800) 555-0000</p>
+										(+233) 2000-600-44</p>
 									</section>
 
 							</div>
